Removed ThumbHalfWidth to fix a bug on small screens

--- a/src/plugin/slider.scss
+++ b/src/plugin/slider.scss
@@ -21,10 +21,12 @@
 
     &_horizontal {
       justify-content: center;
+      transform: translateX(-50%);
     }
 
     &_vertical {
       justify-content: flex-end;
+      transform: translateY(-50%);
     }
   }
 
